Updating Old File for core commit 415302897fdaf927f6898f8318aa6afa836a17e6

--- a/help/release-notes/2019/june-2019.md
+++ b/help/release-notes/2019/june-2019.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: June 27, 2019
 author: crhoades
 translation-type: tm+mt
-source-git-commit: bfbf2074a9dcadd809de043d62f7d2ddaa7c7b31
+source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
 workflow-type: tm+mt
-source-wordcount: '1841'
+source-wordcount: '1859'
 ht-degree: 3%
 
 ---
@@ -19,18 +19,18 @@ ht-degree: 3%
 
 Adobe Experience Platform的新增功能：
 
-* [!DNL Data Science Workspace](#dsw)
-* [!DNL Decisioning Service](#decisioning)
-* [!DNL Query Service](#query)
+* [[!DNL数据科学工作区]](#dsw)
+* [[!DNL决策服务]](#decisioning)
+* [[!DNL查询服务]](#query)
 
 对现有功能的更新：
 
-* [!DNL Experience Data Model (XDM)](#xdm)
-* [!DNL Segmentation Service](#segmentation)
+* [[!DNL体验数据模型(XDM)]](#xdm)
+* [[!DNL分段服务]](#segmentation)
 
 ## [!DNL Data Science Workspace] {#dsw}
 
-Adobe Experience Platform [!DNL Data Science Workspace] 是一种完全受管的服务，它 [!DNL Experience Platform] 使Adobe科学家能够构建和运行机器学习模型，跨解决方案和第三方系统无缝地从数据和内容生成洞察。 [!DNL Data Science Workspace] 与端对端数 [!DNL Platform] 据科学生命周期紧密集成，并为其提供强大动力，包括探索和准备XDM数据，然后开发和运行模型以自动丰富机器学习 [!DNL Real-time Customer Profile] 的洞察。
+Adobe Experience Platform [!DNL Data Science Workspace] 是一项全面管理的服务，它使数据科 [!DNL Experience Platform] 学家能够通过构建和运行机器学习模型，跨Adobe解决方案和第三方系统无缝地从数据和内容生成洞察。 [!DNL Data Science Workspace] 与端对端数 [!DNL Platform] 据科学生命周期紧密集成，并为其提供强大动力，包括探索和准备XDM数据，然后开发和运行模型以自动丰富机器学习 [!DNL Real-time Customer Profile] 的洞察。
 
 **主要功能**
 
@@ -43,7 +43,7 @@ Adobe Experience Platform [!DNL Data Science Workspace] 是一种完全受管的
 | 数据可视化 | 能够执行SQL查询以加 [!DNL Jupyter Notebooks] 快数据准备和功能设计。 |
 | 特征管线 | 用于Scala/PySpark的API/SDK部署功能工程管道，将核心XDM数据转换为功能模式。 |
 | 模型创作 | 使数据科学家能够专注于模型开发的模板和运行时，而不必实施用于访问数据和计算资源的基础架构代码。 您可以导入模型代码并将其操作，以便从中的数据获得洞察 [!DNL Platform]。 |
-| 企业模型管理 | 支持多租户数据模型以跟踪模型版本和相关的超参数配置，为合作伙伴生态系统提供基础。 |
+| 企业模型管理 | 支持多租户数据模型以跟踪模型版本和关联的超参数配置，为合作伙伴生态系统提供基础。 |
 | 模型评估 | 评估和优化PySpark、R和Scala [!DNL Python]中的回归和分类模型。 |
 | 模型部署 | 能够比较多个实验运行中的评估指标和配置，并将最佳模型发布为服务。 |
 | 批评分 | 利用 [!DNL Real-time Customer Profile] 机器学习丰富洞察，或将其作为数据集写回 [!DNL Platform] |
@@ -57,7 +57,7 @@ Adobe Experience Platform [!DNL Data Science Workspace] 是一种完全受管的
 
 ## [!DNL Decisioning Service] {#decisioning}
 
-Adobe Experience Platform [!DNL Decisioning Service] 能够以编程方式智能地为特定个人从一组可用选项中选择“下一个最佳体验”，将其交付给任何渠道或应用程序，并执行报告和分析。
+Adobe Experience Platform [!DNL Decisioning Service] 提供了以编程方式智能地从一组可供特定个人使用的选项中选择“下一个最佳体验”、将其交付给任何渠道或应用程序、执行报告和分析的能力。
 
 预建的丰富优惠模型以渠道不可知的方式支持“下一个最佳”决策的用例。
 
@@ -70,7 +70,7 @@ Adobe Experience Platform [!DNL Decisioning Service] 能够以编程方式智能
 | 角色和权限 | 使用 [!DNL Admin Console]，组织可以创建和管理用户档案，以按类型、访问操作和容器授予对资源的目标访问权。 可以将用户添加到这些访问用户档案，并根据这些策略自动计算有效访问权限。 |
 | 预建优惠对象模型 | 无需先构建模式模型，开发人员 [!DNL Platform] 就可以利用预建的JSON和关系创建优惠目录、定义决策规则和约束，以及组合优惠集合进行决策。 |
 | 基于用户档案和非用户档案数据的决策规则 | 与紧密集成使开发 [!DNL Real-time Customer Profile] 人员能够创建利用用户档案数据的决策规则。 不仅可以使用用户档案属性做出决策，而且还基于用户档案的体验事件历史记录以及与用户身份无关的业务实体（例如，流量条件、产品库存）做出决策。 任何 [!DNL Experience Data Model] (XDM)实体中存在模式, [!DNL Schema Registry] 都可用于决策规则。 规则是一类实体，可重用于任何决策选项和活动。 |
-| 排名和上限 | 对满足给定用户的所有资格和其他约束的决策选项进行排名，并选择最佳选项。 可使用附加的每个用户和全局限制约束限制可用选项的曝光，从而在满足资源约束和用户疲劳的情况下实现个性化。 |
+| 排名和上限 | 对满足给定用户的所有资格和其他约束的决策选项进行排名，并选择最佳选项。 可使用附加的每个用户和全局限制约束限制可用选项的曝光，从而实现资源约束和用户疲劳的个性化。 |
 | [!DNL Decisioning] REST API | 可 [!DNL Decisioning Service] 以使用简单的REST API调用该优惠，以获取给定个人的“下一最佳”。 度量API可用于检查实时优惠建议和上限值。 |
 | 将决策事件流化 [!DNL Data Lake] 到 [!DNL Query Service] | 自动 [!DNL Decisioning Service] 创建数据集，以自动将所有XDM决策事件流化到 [!DNL Data Lake]中。 然后，可以使用数据集进行分析和报告 [!DNL Query Service]。 |
 | 开发人员支持 | 自助服务选择加入AdobeI/O的文档，其中包含各种主题的教程。 |
@@ -84,7 +84,7 @@ Adobe Experience Platform [!DNL Decisioning Service] 能够以编程方式智能
 
 ## [!DNL Query Service] {#query}
 
-[!DNL Query Service] 提供了在Adobe Experience Platform中使用标准SQL查询数据的能力，以支持许多不同的分析和数据管理用例。 It is a serverless tool which allows you to join any datasets in the [!DNL Data Lake] and capture the query results as a new dataset for use in reporting, [!DNL Data Science Workspace], or for ingestion into [!DNL Profile Service].
+[!DNL Query Service] 提供在Adobe Experience Platform使用标准SQL查询数据的能力，以支持许多不同的分析和数据管理用例。 It is a serverless tool which allows you to join any datasets in the [!DNL Data Lake] and capture the query results as a new dataset for use in reporting, [!DNL Data Science Workspace], or for ingestion into [!DNL Profile Service].
 
 You can use [!DNL Query Service] to build data analysis ecosystems, creating a picture of consumers across their various interaction channels. 这些渠道可能包括：
 
@@ -111,15 +111,15 @@ You can use [!DNL Query Service] to build data analysis ecosystems, creating a p
 * [!DNL Query Editor] 显示查询结果的100行示例。 要保留完整的结果集，请使用查询日志中的数据集创建功能。
 * 近期发行版将增加对视图的支持，并增加将计划应用于查询的UI。
 
-有关详细信息， [!DNL Query Service]请参阅产 [品文档](../../query-service/home.md)。
+For more information about [!DNL Query Service], see the [product documentation](../../query-service/home.md).
 
 ## [!DNL Experience Data Model] (XDM) {#xdm}
 
 标准化和互操作性是背后的关键概念 [!DNL Experience Platform]。 [!DNL Experience Data Model] (XDM)由Adobe驱动，旨在实现客户体验数据标准化并定义客户体验管理模式。
 
-XDM是一个公开记录的规范，旨在提高数字体验的强大功能。 它为在Adobe Experience Platform上与服务通信的任何应用程序提供了通用结构和定义。 通过遵守XDM标准，所有客户体验数据都可以整合到一个通用表现形式中，以更快、更集成的方式提供洞察。 您可以从客户行动中获得宝贵的洞察，通过细分定义客户受众，并将客户属性用于个性化目的。
+XDM是一个公开记录的规范，旨在提高数字体验的强大功能。 它为任何与Adobe Experience Platform上的服务通信的应用程序提供了通用结构和定义。 通过遵守XDM标准，所有客户体验数据都可以整合到一个通用表现形式中，以更快、更集成的方式提供洞察。 您可以从客户行动中获得宝贵的洞察，通过细分定义客户受众，并将客户属性用于个性化目的。
 
-XDM是一种机制， [!DNL Experience Cloud]它允许在Adobe Experience Platform的支持下，在正确的渠道，在正确的时刻，向正确的人提供正确的信息。
+XDM是一种机制，它 [!DNL Experience Cloud]允许在Adobe Experience Platform的支持下，在正确的渠道，在恰当的时刻，向正确的人提供正确的信息。
 
 所构建的方法 [!DNL Experience Platform] 可操作 [!DNL XDM System] 模式, [!DNL Experience Data Model] 供组件使 [!DNL Experience Platform] 用。
 
