Updating Old File for core commit 415302897fdaf927f6898f8318aa6afa836a17e6

--- a/help/release-notes/2020/june-2020.md
+++ b/help/release-notes/2020/june-2020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: June 10, 2020
 author: crhoades, ens28527
 translation-type: tm+mt
-source-git-commit: f881c1365684b1ca9e6bf9a8ce866d234dc54128
+source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
 workflow-type: tm+mt
-source-wordcount: '385'
+source-wordcount: '393'
 ht-degree: 6%
 
 ---
@@ -17,15 +17,15 @@ ht-degree: 6%
 
 **发布日期：2020 年 6 月 10 日**
 
-对Adobe Experience Platform中现有功能的更新：
+Adobe Experience Platform现有功能更新：
 
-- [!DNL Data Science Workspace](#dsw)
-- [!DNL Segmentation](#segmentation)
-- [!DNL Sources](#sources)
+- [[!DNL数据科学工作区]](#dsw)
+- [[!DNL分段]](#segmentation)
+- [[!DNL源]](#sources)
 
 ## [!DNL Data Science Workspace] {#dsw}
 
-[!DNL Data Science Workspace] 使用机器学习和人工智能从数据中释放洞察。 集成到Adobe Experience Platform中 [!DNL Data Science Workspace] ，帮助您跨Adobe解决方案使用内容和数据资产进行预测。
+[!DNL Data Science Workspace] 使用机器学习和人工智能从数据中释放洞察。 集成到Adobe Experience Platform，帮 [!DNL Data Science Workspace] 助您跨Adobe解决方案使用内容和数据资产进行预测。
 
 [!DNL Data Science Workspace] 一直致力于通过使用实时机器学习来提供更好的体验和预测。 实时机器学习提供以行业标准可互操作的模型格式创作、测试和部署自定义或导入的预先培训的机器学习模型的能力，以便通过API端点进行实时评分/激活。
 
@@ -53,7 +53,7 @@ Adobe Experience Platform [!DNL Segmentation Service] 提供用户界面和RESTf
 
 ## 源 {#sources}
 
-Adobe Experience Platform可以从外部源收集数据，同时允许您使用服务构建、标记和增强该 [!DNL Platform] 数据。 您可以从各种来源(如Adobe应用程序、基于云的存储、第三方软件和您的CRM系统)收集数据。
+Adobe Experience Platform可以从外部来源收集数据，同时允许您使用服务来构建、标记和增强该 [!DNL Platform] 数据。 您可以从各种来源(如Adobe应用程序、基于云的存储、第三方软件和您的CRM系统)收集数据。
 
 [!DNL Experience Platform] 提供REST风格的API和交互式UI，让您可以轻松为各种数据提供者设置源连接。 这些源连接允许您验证并连接到外部存储系统和CRM服务，设置获取运行的时间，以及管理数据获取吞吐量。
 
