--- a/help/release-notes/2020/may-2020.md
+++ b/help/release-notes/2020/may-2020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: May 13, 2020
 author: crhoades, ens28527
 translation-type: tm+mt
-source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
+source-git-commit: 71678b10c9e137016ea404305b272508b9c8cabe
 workflow-type: tm+mt
-source-wordcount: '1179'
+source-wordcount: '1182'
 ht-degree: 5%
 
 ---
@@ -38,7 +38,7 @@ Adobe Experience Platform is releasing updates to the domain and header bar to i
 
 ## [!DNL Data Science Workspace] {#dsw}
 
-[!DNL Data Science Workspace] 使用机器学习和人工智能从数据中释放洞察。 集成到Adobe Experience Platform，帮 [!DNL Data Science Workspace] 助您跨Adobe解决方案使用内容和数据资产进行预测。 实现这一点 [!DNL Data Science Workspace] 的方法之一是使用 [!DNL JupyterLab]。 [!DNL JupyterLab] 是一个基于Web的用户界面，它 <a href="https://jupyter.org/" target="_blank">[!DNL Project Jupyter]</a> 与Adobe Experience Platform紧密集成。 它为数据科学家提供了交互式开发环境，使他们能 [!DNL Jupyter] 够处理笔记本、代码和数据。
+[!DNL Data Science Workspace] 使用机器学习和人工智能从数据中释放洞察。 集成到Adobe Experience Platform，帮 [!DNL Data Science Workspace] 助您跨Adobe解决方案使用内容和数据资产进行预测。 实现这一点 [!DNL Data Science Workspace] 的方法之一是使用 [!DNL JupyterLab]。 [!DNL JupyterLab] 是[!DNL Project Jupyter]的基 [于web的用户界面](https://jupyter.org/) ，并且紧密集成到Adobe Experience Platform。 它为数据科学家提供了交互式开发环境，使他们能 [!DNL Jupyter] 够处理笔记本、代码和数据。
 
 **新增功能**
 
