Updating Old File for core commit 644e64650465bf2841565f7dc1e8d61e0e196b5b

--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -1,12 +1,13 @@
 ---
-keywords: Experience Platform;home;popular topics
+keywords: Experience Platform;home;popular topics;Amazon S3;s3;S3
 solution: Experience Platform
 title: 使用Flow Service API创建AmazonS3连接器
 topic: overview
+description: 本教程使用Flow Service API指导您完成将Experience Platform连接到AmazonS3（以下简称“S3”）存储的步骤。
 translation-type: tm+mt
-source-git-commit: 8e39cc206efa3fc314ae689845c88f0923ac1743
+source-git-commit: 25f1dfab07d0b9b6c2ce5227b507fc8c8ecf9873
 workflow-type: tm+mt
-source-wordcount: '532'
+source-wordcount: '559'
 ht-degree: 2%
 
 ---
