Updating Old File for core commit b636ab0b974843d39a4cc93304417d12733c6bc6

--- a/help/release-notes/2019/may-2019.md
+++ b/help/release-notes/2019/may-2019.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: June 21, 2019
 author: crhoades
 translation-type: tm+mt
-source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
+source-git-commit: 0f3a4ba6ad96d2226ae5094fa8b5073152df90f7
 workflow-type: tm+mt
-source-wordcount: '1813'
+source-wordcount: '1809'
 ht-degree: 5%
 
 ---
@@ -228,13 +228,13 @@ None.
 
 ## [!DNL Data Governance] {#governance}
 
-Adobe Experience Platform允许公司将来自多个企业系统的数据整合在一起，从而更好地使营销人员能够识别、理解和吸引客户。 [!DNL Experience Platform] 包括端对端数据治理基础结构(包括 [!DNL Data Usage Labeling and Enforcement] DULE)，以确保在系统内和在系统之间 [!DNL Platform] 正确使用数据。
+Adobe Experience Platform允许公司将来自多个企业系统的数据整合在一起，从而更好地使营销人员能够识别、理解和吸引客户。 [!DNL Experience Platform] 包括端对端数据治理基础架构，确保在系统内和系统之间 [!DNL Platform] 正确使用数据。
 
 数据治理是用于管理客户数据并确保遵守适用于数据使用的法规、限制和政策的一系列战略和技术。 它在各个层次中都起 [!DNL Experience Platform] 着关键作用，包括编目、数据谱系、数据使用标签、数据访问策略和访问控制营销行动的数据。
 
 要开始进行数据治理，必须全面了解适用于客户数据的法规、合同义务和公司政策。 从那里，可以通过应用适当的数据使用标签来对数据进行分类，并且可以通过定义数据使用策略来控制其使用。
 
-DULE框架通过用户界面和DULE API简化了对数据进行分类和创建数据使用策 [!DNL Experience Platform] 略的过程并简 [!DNL Policy Service] 化了。
+该框 [!DNL Data Governance] 架通过用户界面和API简化数据分类和创建数据使用策略 [!DNL Experience Platform] 的过程并简 [!DNL Policy Service] 化。
 
 | 功能 | 描述 |
 | -----------| ---------- |
