--- a/help/release-notes/2020/may-2020.md
+++ b/help/release-notes/2020/may-2020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: May 13, 2020
 author: crhoades, ens28527
 translation-type: tm+mt
-source-git-commit: 71678b10c9e137016ea404305b272508b9c8cabe
+source-git-commit: af8a5c301e403e0e5a1c5ab45023fb54d0b678cc
 workflow-type: tm+mt
-source-wordcount: '1182'
+source-wordcount: '1183'
 ht-degree: 5%
 
 ---
@@ -17,7 +17,7 @@ ht-degree: 5%
 
 **发行日期：2020 年 5 月 13 日**
 
-Adobe Experience Platform现有功能更新：
+Adobe Experience Platform 现有功能的更新包括：
 
 - [用户界面更新](#ux)
 - [[!DNL数据科学工作区]](#dsw)
@@ -49,7 +49,7 @@ Adobe Experience Platform is releasing updates to the domain and header bar to i
 | 内核 | Scala([!DNL Spark])笔记本现在通过Scala内核创作。 PySpark笔记本现在通过内核进行 [!DNL Python] 创作。 已 [!DNL Spark] 弃用和PySpark内核，并将其设置为在后续发行版中删除。 |
 | 菜谱 | 新的PySpark和 [!DNL Spark] 菜谱现在遵循与 [!DNL Docker] R和菜谱类 [!DNL Python] 似的工作流程。 |
 
-有关将笔记本和菜谱迁移至使用2.4的 [!DNL Spark] 更多信息，请参阅笔记本 [电脑迁移指南](../../data-science-workspace/recipe-notebook-migration.md)。 有关数据科学工作区的更多一般信息，请参阅 [概述文档](../../data-science-workspace/home.md)。
+有关迁移笔记本和菜谱以使用2.4的更 [!DNL Spark] 多信息，请参阅笔记本 [数据访问指南](../../data-science-workspace/jupyterlab/access-notebook-data.md)。 有关数据科学工作区的更多一般信息，请参阅 [概述文档](../../data-science-workspace/home.md)。
 
 ## [!DNL Destinations] {#destinations}
 
