--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -3,9 +3,10 @@ keywords: Experience Platform;home;popular topics;Amazon S3;s3;S3
 solution: Experience Platform
 title: 使用Flow Service API创建AmazonS3连接器
 topic: overview
+type: Tutorial
 description: 本教程使用Flow Service API指导您完成将Experience Platform连接到AmazonS3（以下简称“S3”）存储的步骤。
 translation-type: tm+mt
-source-git-commit: 25f1dfab07d0b9b6c2ce5227b507fc8c8ecf9873
+source-git-commit: 97dfd3a9a66fe2ae82cec8954066bdf3b6346830
 workflow-type: tm+mt
 source-wordcount: '559'
 ht-degree: 2%
