--- a/help/sources/tutorials/ui/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/ui/create/cloud-storage/s3.md
@@ -3,9 +3,10 @@ keywords: Experience Platform;home;popular topics;S3;se;Amazon S3;amazon s3
 solution: Experience Platform
 title: 在UI中创建一个AmazonS3源连接器
 topic: overview
+type: Tutorial
 description: 本教程提供了使用平台用户界面创建AmazonS3（以下称“S3”）源连接器的步骤。
 translation-type: tm+mt
-source-git-commit: f82dfee2c75a0b8b2ec1615266780b309152ead4
+source-git-commit: 97dfd3a9a66fe2ae82cec8954066bdf3b6346830
 workflow-type: tm+mt
 source-wordcount: '560'
 ht-degree: 1%
