Updating Old File for core commit 9f250fa4efc226d84f1f15334893db6a15df0b59

--- a/help/release-notes/2019/june-2019.md
+++ b/help/release-notes/2019/june-2019.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: June 27, 2019
 author: crhoades
 translation-type: tm+mt
-source-git-commit: 1b398e479137a12bcfc3208d37472aae3d6721e1
+source-git-commit: 801da8a705360688f230eae5772a8bed9a1e856e
 workflow-type: tm+mt
-source-wordcount: '1859'
+source-wordcount: '1833'
 ht-degree: 3%
 
 ---
@@ -19,14 +19,14 @@ ht-degree: 3%
 
 Adobe Experience Platform的新增功能：
 
-* [[!DNL数据科学工作区]](#dsw)
-* [[!DNL决策服务]](#decisioning)
-* [[!DNL查询服务]](#query)
+* [[!DNL Data Science Workspace]](#dsw)
+* [[!DNL Decisioning Service]](#decisioning)
+* [[!DNL Query Service]](#query)
 
 对现有功能的更新：
 
-* [[!DNL体验数据模型(XDM)]](#xdm)
-* [[!DNL分段服务]](#segmentation)
+* [[!DNL Experience Data Model (XDM)]](#xdm)
+* [[!DNL Segmentation Service]](#segmentation)
 
 ## [!DNL Data Science Workspace] {#dsw}
 
@@ -79,8 +79,6 @@ Adobe Experience Platform [!DNL Decisioning Service] 提供了以编程方式智
 
 * 优惠数据模型不通过该模型公开 [!DNL Schema Registry] ，因此只能以有限的方式进行扩展。 模型模式具有内置结构，允许附加自定义数据。 将来，您将能够扩展基本XDM模型类以定义自己的自定义决策域。
 * 您必须使用优惠管理域模型和用户进行配置，并且必须在此产品上下文中管理集成。
-
-要了解更多信息，请访 [问决策服务概述](../../decisioning-service/home.md)。
 
 ## [!DNL Query Service] {#query}
 
