Updating Old File for core commit 97f242c8e87a1192be4699aabe1d811febe03fd5

--- a/help/release-notes/2020/may-2020.md
+++ b/help/release-notes/2020/may-2020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: May 13, 2020
 author: crhoades, ens28527
 translation-type: tm+mt
-source-git-commit: 0232acdc64019b9d93888e8137ef9bc8e114779b
+source-git-commit: adf8e8457c8ffef263223a38d3f9c345cf7c6ab2
 workflow-type: tm+mt
-source-wordcount: '1167'
+source-wordcount: '1164'
 ht-degree: 6%
 
 ---
@@ -57,27 +57,25 @@ Adobe Experience Platform is releasing updates to the domain and header bar to i
 
 **[!DNL Facebook]**
 
-Adobe实时CDP现在支持活动激活 [!DNL Facebook]，允许您为激活用户档案，以便根据散列 [!DNL Facebook] 电子邮件进行受众定位、个性化和抑制。
+实时CDP现在支持激活到的， [!DNL Facebook]允许您为活动激活用户档案，以便根据散列 [!DNL Facebook] 电子邮件进行受众定位、个性化和抑制。
 
-有关新功能的更多信息，请参 [阅Facebook目标页](/help/rtcdp/destinations/facebook-destination.md) 。
-
-<br> 
+有关新功能的更多信息，请参 [阅Facebook目标页](../../destinations/catalog/social/facebook.md) 。
 
 **[!DNL Amazon Kinesis]和流 [!DNL Azure Event Hubs] 式云存储目标**
 
-Adobe实时CDP现在支持将数据激活流化到云存储目标，允许您以JSON格式将受众数据和事件导出到这些目标。 然后，您可以在目标事件上描述业务逻辑。 有关详细信息，请参阅以下内容：
+实时CDP现在支持将激活存储流化到云目标，允许您以JSON格式将受众数据和事件导出到这些目标。 然后，您可以在目标事件上描述业务逻辑。 有关详细信息，请参阅以下内容：
 
 >[!NOTE]
 >
->Adobe [!DNL Amazon Kinesis] 实时 [!DNL Azure Event Hubs] CDP中的目标和目标目前处于测试阶段。 文档和功能可能会发生变化。
+>实时 [!DNL Amazon Kinesis] CDP [!DNL Azure Event Hubs] 中的目标和目标当前处于测试阶段。 文档和功能可能会发生变化。
 
 | 文档 | 描述 |
 |--- | ---|
-| [(Beta)AmazonKinesis目的地](/help/rtcdp/destinations/amazon-kinesis-destination.md) | 本文介绍如何创建到存储的实时出站连接，以 [!DNL Amazon Kinesis] 便从Adobe Experience Platform流数据。 |
-| [（测试版）Azure事件集线器目标](/help/rtcdp/destinations/azure-event-hubs-destination.md) | 本文介绍如何创建到存储的实时出站连接，以 [!DNL Azure Event Hubs] 便从Adobe Experience Platform流数据。 |
-| [API教程——连接到流目标并激活数据](/help/rtcdp/destinations/streaming-destinations-api-tutorial.md) | 本教程演示了如何使用API调用连接到您的Adobe Experience Platform存储、创建到流式云目标([!DNL Amazon Kinesis] 或 [!DNL Azure Event Hubs])的连接、创建到新创建目标的数据流以及将数据激活到新创建的目标。 |
+| [(Beta)AmazonKinesis目的地](../../destinations/catalog/cloud-storage/amazon-kinesis.md) | 本文介绍如何创建到存储的实时出站连接，以 [!DNL Amazon Kinesis] 便从Adobe Experience Platform流数据。 |
+| [（测试版）Azure事件集线器目标](../../destinations/catalog/cloud-storage/azure-event-hubs.md) | 本文介绍如何创建到存储的实时出站连接，以 [!DNL Azure Event Hubs] 便从Adobe Experience Platform流数据。 |
+| [API教程——连接到流目标并激活数据](../../destinations/api/streaming-destinations.md) | 本教程演示了如何使用API调用连接到您的Adobe Experience Platform存储、创建到流式云目标([!DNL Amazon Kinesis] 或 [!DNL Azure Event Hubs])的连接、创建到新创建目标的数据流以及将数据激活到新创建的目标。 |
 
-有关详细信息，请参阅目 [标概述](/help/rtcdp/destinations/destinations-overview.md)。
+有关详细信息，请参阅目 [标概述](../../destinations/home.md)。
 
 ## [!DNL Experience Platform Web SDK] 和 [!DNL Experience Platform Edge Network] {#edge}
 
