Updating Old File for core commit

--- a/help/release-notes/2019/june-2019.md
+++ b/help/release-notes/2019/june-2019.md
@@ -73,7 +73,7 @@ Adobe Experience Platform [!DNL Decisioning Service] 提供了以编程方式智
 | 排名和上限 | 对满足给定用户的所有资格和其他约束的决策选项进行排名，并选择最佳选项。 可使用附加的每个用户和全局限制约束限制可用选项的曝光，从而实现资源约束和用户疲劳的个性化。 |
 | [!DNL Decisioning] REST API | 可 [!DNL Decisioning Service] 以使用简单的REST API调用该优惠，以获取给定个人的“下一最佳”。 度量API可用于检查实时优惠建议和上限值。 |
 | 将决策事件流化 [!DNL Data Lake] 到 [!DNL Query Service] | 自动 [!DNL Decisioning Service] 创建数据集，以自动将所有XDM决策事件流化到 [!DNL Data Lake]中。 然后，可以使用数据集进行分析和报告 [!DNL Query Service]。 |
-| 开发人员支持 | 自助服务选择加入AdobeI/O的文档，其中包含各种主题的教程。 |
+| 开发人员支持 | 自助服务选择加入Adobe I/O相关文档，其中包含各种主题的教程。 |
 
 **已知问题**
 
