Updating Old File for core commit

--- a/help/release-notes/2019/may-2019.md
+++ b/help/release-notes/2019/may-2019.md
@@ -7,7 +7,7 @@ author: crhoades
 translation-type: tm+mt
 source-git-commit: 0f3a4ba6ad96d2226ae5094fa8b5073152df90f7
 workflow-type: tm+mt
-source-wordcount: '1809'
+source-wordcount: '1785'
 ht-degree: 5%
 
 ---
@@ -19,13 +19,13 @@ ht-degree: 5%
 
 Adobe Experience Platform的新增功能：
 
-* [[!DNL数据摄取]](#ingestion)
-* [[!DNL数据管理]](#management)
-* [[!DNL体验数据模型(XDM)]](#xdm)
-* [[!DNL实时客户用户档案]](#profile)
-* [[!DNL标识服务]](#identity)
-* [[!DNL分段服务]](#segmentation)
-* [[!DNL数据管理]](#governance)
+* [[!DNL Data Ingestion]](#ingestion)
+* [[!DNL Data Management]](#management)
+* [[!DNL Experience Data Model (XDM)]](#xdm)
+* [[!DNL Real-time Customer Profile]](#profile)
+* [[!DNL Identity Service]](#identity)
+* [[!DNL Segmentation Service]](#segmentation)
+* [[!DNL Data Governance]](#governance)
 
 ## [!DNL Data Ingestion] {#ingestion}
 
@@ -195,7 +195,7 @@ None.
 
 有关产品文档，请参阅 [用户档案概述](../../profile/home.md)。
 
-## 标识服务 {#identity}
+## Identity Service {#identity}
 
 Identity Service解决了客户身份分离所带来的根本挑战，这是由于客户数据在组织的生态系统中的每个不同系统中分散而造成的。 它通过跨设备和跨消费者与品牌互动所使用的各种系统连接身份来实现这一点。 通过这种方式，Identity Service可帮助您全面了解客户及其行为，从而实时提供有影响力的数字体验。
 
