Updating Old File for core commit

--- a/help/release-notes/2020/may-2020.md
+++ b/help/release-notes/2020/may-2020.md
@@ -30,7 +30,7 @@ Adobe Experience Platform 现有功能的更新包括：
 
 Adobe Experience Platform is releasing updates to the domain and header bar to improve your experience and unify with other [!DNL Experience Cloud] applications.
 
-- 更轻松地在组织之间或切换到其他应用程序
+- Easier switching between your organizations or to a different application
 - 改进了用户帮助，包括“帮助”菜单中的特色文章和上下文相关文档
 - Ability to give feedback about the [!DNL Experience Platform] and file support tickets
 
