--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -6,61 +6,61 @@ topic: overview
 type: Tutorial
 description: 本教程使用Flow Service API指导您完成将Experience Platform连接到AmazonS3（以下简称“S3”）存储的步骤。
 translation-type: tm+mt
-source-git-commit: 7f7802e1867e567614b4c09c85c0f60b4a01c4fc
+source-git-commit: 9092c3d672967d3f6f7bf7116c40466a42e6e7b1
 workflow-type: tm+mt
-source-wordcount: '559'
+source-wordcount: '580'
 ht-degree: 2%
 
 ---
 
 
-# 使用 [!DNL Amazon] API创建S3连 [!DNL Flow Service] 接器
+# 使用[!DNL Flow Service] API创建[!DNL Amazon] S3连接器
 
-[!DNL Flow Service] 用于收集和集中Adobe Experience Platform内不同来源的客户数据。 该服务提供用户界面和RESTful API，所有支持的源都可从中连接。
+[!DNL Flow Service] 用于收集和集中Adobe Experience Platform内不同来源的客户数据。该服务提供用户界面和RESTful API，所有支持的源都可从中连接。
 
-本教程使 [!DNL Flow Service] 用API指导您完成连接 [!DNL Experience Platform] 到 [!DNL Amazon] S3（以下称“S3”）存储的步骤。
+本教程使用[!DNL Flow Service] API指导您完成将[!DNL Experience Platform]连接到[!DNL Amazon] S3（以下简称“S3”）存储的步骤。
 
-如果您希望使用中的用 [!DNL Experience Platform]户界 [面，AmazonS3源连接器UI教程提供了执行类似操作的分步说明](../../../ui/create/cloud-storage/s3.md) 。
+如果您希望使用[!DNL Experience Platform]中的用户界面，[AmazonS3源连接器UI教程](../../../ui/create/cloud-storage/s3.md)提供了执行类似操作的分步说明。
 
 ## 入门指南
 
 本指南要求对Adobe Experience Platform的下列部分有工作上的理解：
 
-* [来源](../../../../home.md): [!DNL Experience Platform] 允许从各种来源摄取数据，同时使您能够使用服务来构建、标记和增强传入数 [!DNL Platform] 据。
+* [来源](../../../../home.md): [!DNL Experience Platform] 允许从各种来源摄取数据，同时使您能够使用服务来构建、标记和增强传入 [!DNL Platform] 数据。
 * [沙箱](../../../../../sandboxes/home.md): [!DNL Experience Platform] 提供将单个实例分为单独的虚 [!DNL Platform] 拟环境的虚拟沙箱，以帮助开发和发展数字体验应用程序。
 
-以下各节提供了使用API成功连接到S3存储所需了解的其他信 [!DNL Flow Service] 息。
+以下各节提供了使用[!DNL Flow Service] API成功连接到S3存储时需要了解的其他信息。
 
 ### 收集所需的凭据
 
-要连接 [!DNL Flow Service] S3存储，必须为以下连接属性提供值：
+要使[!DNL Flow Service]与S3存储连接，必须为以下连接属性提供值：
 
 | 凭据 | 描述 |
 | ---------- | ----------- |
 | `s3AccessKey` | S3存储的访问密钥ID。 |
 | `s3SecretKey` | S3存储的密钥ID。 |
 
-有关入门的更多信息，请访 [问此AWS文档](https://aws.amazon.com/blogs/security/wheres-my-secret-access-key/)。
+有关入门的详细信息，请访问[此AWS文档](https://aws.amazon.com/blogs/security/wheres-my-secret-access-key/)。
 
 ### 读取示例API调用
 
-本教程提供示例API调用，以演示如何设置请求的格式。 这包括路径、必需的标头和格式正确的请求负载。 还提供API响应中返回的示例JSON。 有关示例API调用文档中使用的惯例的信息，请参阅疑难解答 [指南中有关如何阅读示例API调](../../../../../landing/troubleshooting.md#how-do-i-format-an-api-request) 用 [!DNL Experience Platform] 一节。
+本教程提供示例API调用，以演示如何设置请求的格式。 这包括路径、必需的标头和格式正确的请求负载。 还提供API响应中返回的示例JSON。 有关示例API调用文档中使用的约定的信息，请参见](../../../../../landing/troubleshooting.md#how-do-i-format-an-api-request)疑难解答指南中关于如何阅读示例API调用[的一节。[!DNL Experience Platform]
 
 ### 收集所需标题的值
 
-要调用API，您必 [!DNL Platform] 须先完成身份验证 [教程](../../../../../tutorials/authentication.md)。 完成身份验证教程可为所有API调用中的每个所需 [!DNL Experience Platform] 标头提供值，如下所示：
+要调用[!DNL Platform] API，您必须先完成[身份验证教程](../../../../../tutorials/authentication.md)。 完成身份验证教程后，将为所有[!DNL Experience Platform] API调用中每个所需标头提供值，如下所示：
 
-* 授权：承载者 `{ACCESS_TOKEN}`
-* x-api-key: `{API_KEY}`
-* x-gw-ims-org-id: `{IMS_ORG}`
+* `Authorization: Bearer {ACCESS_TOKEN}`
+* `x-api-key: {API_KEY}`
+* `x-gw-ims-org-id: {IMS_ORG}`
 
-中的所有资 [!DNL Experience Platform]源(包括属于这些资源 [!DNL Flow Service]的资源)都隔离到特定虚拟沙箱。 对API的 [!DNL Platform] 所有请求都需要一个标头，它指定操作将在中进行的沙箱的名称：
+[!DNL Experience Platform]中的所有资源（包括属于[!DNL Flow Service]的资源）都隔离到特定虚拟沙箱。 对[!DNL Platform] API的所有请求都需要一个标头，它指定操作将在以下位置进行的沙箱的名称：
 
-* x-sandbox-name: `{SANDBOX_NAME}`
+* `x-sandbox-name: {SANDBOX_NAME}`
 
 所有包含有效负荷(POST、PUT、PATCH)的请求都需要额外的媒体类型标头：
 
-* 内容类型： `application/json`
+* `Content-Type: application/json`
 
 ## 创建连接
 
@@ -73,6 +73,8 @@ POST /connections
 ```
 
 **请求**
+
+要创建S3连接，其唯一连接规范ID必须作为POST请求的一部分提供。 S3的连接规范ID为`ecadc60c-7455-4d87-84dc-2a0e293d997b`。
 
 ```shell
 curl -X POST \
@@ -103,7 +105,7 @@ curl -X POST \
 | -------- | ----------- |
 | `auth.params.s3AccessKey` | 与您的S3存储关联的访问密钥。 |
 | `auth.params.s3SecretKey` | 您与S3存储关联的密钥。 |
-| `connectionSpec.id` | S3存储连接规范ID: `ecadc60c-7455-4d87-84dc-2a0e293d997b` |
+| `connectionSpec.id` | S3存储连接规范ID:`ecadc60c-7455-4d87-84dc-2a0e293d997b` |
 
 **响应**
 
@@ -118,4 +120,4 @@ curl -X POST \
 
 ## 后续步骤
 
-通过本教程，您已使用API创建了S3连接，并且作为响应主体的一部分获得了唯一ID。 您可以使用此连接ID [使用流服务API探索云存储](../../explore/cloud-storage.md) , [或使用流服务API获取拼花数据](../../cloud-storage-parquet.md)。
+通过本教程，您已使用API创建了S3连接，并且作为响应主体的一部分获得了唯一ID。 您可以使用此连接ID来[使用流服务API](../../explore/cloud-storage.md)或[使用流服务API](../../cloud-storage-parquet.md)采集拼花存储。
