Updating Old File for core commit 645060ff117e61c244e75f9f4a239570af8222fc

--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -1,20 +1,20 @@
 ---
 keywords: Experience Platform；主页；热门主题；AmazonS3;s3;S3
 solution: Experience Platform
-title: 使用Flow Service API创建AmazonS3连接器
+title: 使用流服务API创建AmazonS3源连接
 topic: overview
 type: Tutorial
-description: 本教程使用Flow Service API指导您完成将Experience Platform连接到AmazonS3（以下简称“S3”）存储的步骤。
+description: 了解如何使用Flow Service API将Adobe Experience Platform连接到AmazonS3。
 translation-type: tm+mt
-source-git-commit: 2940f030aa21d70cceeedc7806a148695f68739e
+source-git-commit: a489ab248793a063295578943ad600d8eacab6a2
 workflow-type: tm+mt
-source-wordcount: '593'
+source-wordcount: '583'
 ht-degree: 2%
 
 ---
 
 
-# 使用[!DNL Flow Service] API创建[!DNL Amazon] S3连接器
+# 使用[!DNL Flow Service] API创建[!DNL Amazon] S3源连接
 
 [!DNL Flow Service] 用于收集和集中Adobe Experience Platform内不同来源的客户数据。该服务提供用户界面和RESTful API，所有支持的源都可从中连接。
 
