--- a/help/release-notes/2024/july-2024.md
+++ b/help/release-notes/2024/july-2024.md
@@ -2,7 +2,7 @@
 title: Adobe Experience Platform 发行说明（2024 年 7 月）
 description: Adobe Experience Platform 的 2024 年 7 月发行说明。
 exl-id: c7fc2de2-7657-436e-8581-21ce46bbd079
-source-git-commit: d9e9275db1989df22b13b4f000dde645f40d5744
+source-git-commit: cbf10d4c45e7bc2025b79ceef377b1aebe748b93
 workflow-type: ht
 source-wordcount: '1225'
 ht-degree: 100%
@@ -41,7 +41,7 @@ Experience Platform 提供了一整套数据安全功能，允许您通过程序
 
 | 新文档 | 描述 |
 | --- | --- |
-| [!DNL Data Hygiene API] 参考 | 使用 Data Hygiene API 有效地管理 Experience Platform 中的数据存储。通过这些功能，您可以确保信息按预期使用、在错误时更新以及在组织政策认为必要时删除。<br><br>阅读 [Data Hygiene API 参考文档](https://developer.adobe.com/experience-platform-apis/references/data-hygiene/)以获取有关如何使用 API 的详细信息。您可以使用 Data Hygiene API 来安排数据集到期日期，以编程方式更正或删除存储的客户个人数据，并检查数据卫生配额。API 参考文档包含可用的端点、请求参数和响应格式，以帮助您有效地管理存储的客户数据。</br></br> |
+| [!DNL Data Hygiene API] 参考 | 使用 Data Hygiene API 有效地管理 Experience Platform 中的数据存储。通过这些功能，您可以确保信息按预期使用、在错误时更新以及在组织政策认为必要时删除。<br><br>阅读 [Data Hygiene API 参考文档](https://developer.adobe.com/experience-platform-apis/references/data-hygiene/)以获取有关如何使用 API 的详细信息。您可以使用 Data Hygiene API 来安排数据集过期日期，以编程方式更正或删除存储的客户个人数据，并检查数据卫生配额。API 参考文档包含可用的端点、请求参数和响应格式，以帮助您有效地管理存储的客户数据。</br></br> |
 
 如需了解更多信息，请阅读[高级数据生命周期管理概述](../../hygiene/home.md)。
 
@@ -53,7 +53,7 @@ Adobe Experience Platform 提供一套技术，通过这些技术，可收集客
 
 | 类型 | 功能 | 描述 |
 | --- | --- | --- |
-| Web SDK | 自动跟踪命题互动 | 您现在可以使用 `autoTrackPropositionInteractionsEnabled` Web SDK 中的属性来确定 Web SDK 是否应该自动收集命题交互。有关更多信息，请参阅[`autoTrackPropositionInteractionsEnabled`](../../web-sdk/commands/configure/autotrackpropositioninteractionsenabled.md)文档。 |
+| Web SDK | 自动跟踪命题互动 | 您现在可以使用 `autoCollectPropositionInteractions` Web SDK 中的属性来确定 Web SDK 是否应该自动收集命题交互。有关更多信息，请参阅[`autoCollectPropositionInteractions`](../../web-sdk/commands/configure/autocollectpropositioninteractions.md)文档。 |
 
 {style="table-layout:auto"}
 
@@ -91,8 +91,8 @@ Adobe Experience Platform 数据治理是一系列策略和技术，用于管理
 
 | 目标 | 描述 |
 | ----------- | ----------- |
-| [（Beta）Merkury 企业连接](/help/destinations/catalog/data-partners/merkury-enterprise-connections.md) | 使用 [!DNL Merkury Enterprise Connections] 安全地将观众送达目标 [!DNL Merkury]。[!DNL Merkury] 为营销人员提供轻松匹配和投放个性化受众的机会 [!DNL Merkury]&#39;s 80+ Premium 可寻址电视/CTV、出版商和广告技术连接。[!DNL Merkury] 由超过 2.68 亿人的美国成年消费者综合标识图提供支持。 |
-| [（Beta）Merkury 企业标识](/help/destinations/catalog/data-partners/merkury-enterprise-identity.md) | 使用 [!DNL Merkury Enterprise Identity] 目标来建立更准确、更全面、更有洞察力的消费者档案。通过改进的配置文件数据，营销人员可以获得更好的洞察、细分和模型，从而实现更准确的定位和预测模型。 |
+| [（Beta）Merkury 企业连接](/help/destinations/catalog/data-partners/merkury-enterprise-connections.md) | 使用 [!DNL Merkury Enterprise Connections] 安全地将观众送达目标 [!DNL Merkury]。[!DNL Merkury] 为营销人员提供轻松匹配和投放个性化受众的机会 [!DNL Merkury]&#39;s 80+ Premium 可寻址电视/CTV、出版商和广告技术连接。[!DNL Merkury] 由超过 2.68 亿人的美国成年消费者综合身份标识图提供支持。 |
+| [（Beta）Merkury 企业身份标识](/help/destinations/catalog/data-partners/merkury-enterprise-identity.md) | 使用 [!DNL Merkury Enterprise Identity] 目标来建立更准确、更全面、更有洞察力的消费者档案。通过改进的配置文件数据，营销人员可以获得更好的洞察、细分和模型，从而实现更准确的定位和预测模型。 |
 
 {style="table-layout:auto"}
 
