--- a/help/release-notes/2024/july-2024.md
+++ b/help/release-notes/2024/july-2024.md
@@ -3,7 +3,7 @@ title: Adobe Experience Platform 发行说明（2024 年 7 月）
 description: Adobe Experience Platform 的 2024 年 7 月发行说明。
 exl-id: c7fc2de2-7657-436e-8581-21ce46bbd079
 source-git-commit: cbf10d4c45e7bc2025b79ceef377b1aebe748b93
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '1225'
 ht-degree: 100%
 
