Updated by task 'AUTO_TM_MT_1738707689565'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/b90daf98b4f99a2e527dce902a1520441bbbd134

--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -2,9 +2,9 @@
 title: Amazon S3 Source连接器概述
 description: 了解如何使用API或用户界面将Amazon S3连接到Adobe Experience Platform。
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: ee659ded9701132b12d5b93672b4c958e9720028
+source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
 workflow-type: tm+mt
-source-wordcount: '1017'
+source-wordcount: '1027'
 ht-degree: 0%
 
 ---
@@ -19,9 +19,9 @@ Adobe Experience Platform为AWS、[!DNL Google Cloud Platform]和[!DNL Azure]等
 
 云存储源可以将您自己的数据导入Experience Platform，而无需下载、格式化或上传。 引入的数据可以格式化为XDM JSON、XDM Parquet或分隔。 该过程的每个步骤都集成到源工作流中。 Experience Platform允许您通过批处理从S3引入数据。
 
-## 先决条件 {#prerequisites}
+## 设置您的[!DNL Amazon S3]源以在Azure上Experience Platform {#azure}
 
-此部分概述在将[!DNL Amazon S3]帐户连接到Experience Platform之前必须完成的先决步骤。
+请按照以下步骤了解如何设置您的[!DNL Amazon S3]帐户以在Azure上Experience Platform。
 
 ### IP地址允许列表
 
@@ -134,7 +134,7 @@ Adobe Experience Platform为AWS、[!DNL Google Cloud Platform]和[!DNL Azure]等
 
 ### 使用API连接[!DNL Amazon S3]以Experience Platform
 
-- [使用流服务API创建S3基本连接](../../tutorials/api/create/cloud-storage/s3.md)
+- [使用流服务API将Amazon S3连接到Experience Platform](../../tutorials/api/create/cloud-storage/s3.md)
 - [使用流量服务API浏览云存储源的数据结构和内容](../../tutorials/api/explore/cloud-storage.md)
 - [使用流服务API为云存储源创建数据流](../../tutorials/api/collect/cloud-storage.md)
 
