--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -2,7 +2,7 @@
 title: 使用流服务API将Amazon S3连接到Experience Platform
 description: 了解如何使用流服务API将Adobe Experience Platform连接到Amazon S3。
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 22eae80d184ee6d0295be88856a47893faa428c7
+source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
 workflow-type: tm+mt
 source-wordcount: '1040'
 ht-degree: 3%
@@ -114,7 +114,7 @@ curl -X POST \
 
 ### 更新您的[!DNL S3]会话令牌
 
-`s3SessionToken`是临时的，过期时必须更新。 您可以通过向[!DNL Flow Service] API发出PATCH请求来更新与您的基本连接关联的会话令牌。 有关[!DNL S3]临时安全凭据的更多信息，请参阅[[!DNL S3] 概述](../../../../connectors/cloud-storage/s3.md#prerequisites)。
+`s3SessionToken`是临时的，过期时必须更新。 您可以通过向[!DNL Flow Service] API发出PATCH请求来更新与您的基本连接关联的会话令牌。 有关[!DNL S3]临时安全凭据的更多信息，请参阅[[!DNL S3] 概述](../../../../connectors/cloud-storage/s3.md#azure)。
 
 >[!IMPORTANT]
 >
