--- a/help/sources/connectors/cloud-storage/s3.md
+++ b/help/sources/connectors/cloud-storage/s3.md
@@ -2,9 +2,9 @@
 title: Amazon S3 Source连接器概述
 description: 了解如何使用API或用户界面将Amazon S3连接到Adobe Experience Platform。
 exl-id: e38c7d09-5f5e-4c8a-b494-dce9f984f3d8
-source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
+source-git-commit: 719f1bca20d5118de14ebe324675bb0aab6161e8
 workflow-type: tm+mt
-source-wordcount: '1027'
+source-wordcount: '1067'
 ht-degree: 0%
 
 ---
@@ -13,19 +13,19 @@ ht-degree: 0%
 
 >[!IMPORTANT]
 >
->在Amazon Web Services (AWS)上运行Adobe Experience Platform时，您现在可以使用[!DNL Amazon S3]源。 在AWS上运行的Experience Platform当前仅对有限数量的客户可用。 要了解有关支持的Experience Platform基础架构的更多信息，请参阅[Experience Platform多云概述](../../../landing/multi-cloud.md)。
+>在Amazon Web Services (AWS)上运行Adobe Experience Platform时，您现在可以使用[!DNL Amazon S3]源。 在AWS上运行的Experience Platform当前仅对有限数量的客户可用。 要了解有关支持的Experience Platform基础架构的更多信息，请参阅[Experience Platform multi-cloud概述](../../../landing/multi-cloud.md)。
 
-Adobe Experience Platform为AWS、[!DNL Google Cloud Platform]和[!DNL Azure]等云提供商提供本机连接。 您可以将这些系统中的数据导入Experience Platform。
+Adobe Experience Platform为AWS、[!DNL Google Cloud Platform]和[!DNL Azure]等云提供商提供本机连接。 您可以将来自这些系统的数据导入Experience Platform。
 
-云存储源可以将您自己的数据导入Experience Platform，而无需下载、格式化或上传。 引入的数据可以格式化为XDM JSON、XDM Parquet或分隔。 该过程的每个步骤都集成到源工作流中。 Experience Platform允许您通过批处理从S3引入数据。
+云存储源可以将您自己的数据导入Experience Platform，而无需下载、设置格式或上传。 引入的数据可以格式化为XDM JSON、XDM Parquet或分隔。 该过程的每个步骤都集成到源工作流中。 Experience Platform允许您通过批处理从S3引入数据。
 
-## 设置您的[!DNL Amazon S3]源以在Azure上Experience Platform {#azure}
+## 在Azure上为Experience Platform设置[!DNL Amazon S3]源 {#azure}
 
-请按照以下步骤了解如何设置您的[!DNL Amazon S3]帐户以在Azure上Experience Platform。
+请按照以下步骤了解如何在Azure上为Experience Platform设置[!DNL Amazon S3]帐户。
 
-### IP地址允许列表
+### 列入允许列表在Azure上连接的IP地址
 
-在使用源连接器之前，必须将IP地址列表添加到允许列表中。 未能将特定于区域的IP地址添加到允许列表中，可能会导致使用源时出现错误或性能不佳。 有关详细信息，请参阅[IP地址允许列表](../../ip-address-allow-list.md)页。
+在将源连接到Azure上的Experience Platform之前，必须将特定于区域的IP地址添加到允许列表。 有关详细信息，请阅读有关[IP地址列入允许列表以连接到Azure](../../ip-address-allow-list.md)上的Experience Platform的指南。
 
 ### 文件和目录的命名约束
 
@@ -61,24 +61,28 @@ Adobe Experience Platform为AWS、[!DNL Google Cloud Platform]和[!DNL Azure]等
 
 有关如何生成临时会话令牌的步骤，请参阅有关临时会话令牌的此[[!DNL AWS] 文档](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_request.html#api_getsessiontoken)。
 
-## 设置您的[!DNL Amazon S3]源以便在Amazon Web Services上Experience Platform {#aws}
+## 在Amazon Web Services上为Experience Platform设置[!DNL Amazon S3]源 {#aws}
 
 >[!AVAILABILITY]
 >
->本节适用于在Amazon Web Services (AWS)上运行的Experience Platform的实施。 在AWS上运行的Experience Platform当前仅对有限数量的客户可用。 要了解有关支持的Experience Platform基础架构的更多信息，请参阅[Experience Platform多云概述](../../../landing/multi-cloud.md)。
+>本节适用于在Amazon Web Services (AWS)上运行的Experience Platform的实施。 在AWS上运行的Experience Platform当前仅对有限数量的客户可用。 要了解有关支持的Experience Platform基础架构的更多信息，请参阅[Experience Platform multi-cloud概述](../../../landing/multi-cloud.md)。
 
-请按照以下步骤了解如何设置您的[!DNL Amazon S3]帐户以在Amazon Web Services (AWS)上Experience Platform。
+请按照以下步骤了解如何在Amazon Web Services (AWS)上为Experience Platform设置[!DNL Amazon S3]帐户。
 
 ### 先决条件
 
-若要将您的[!DNL Amazon S3]帐户连接到AWS上的Experience Platform，您必须具备以下条件：
+要将您的[!DNL Amazon S3]帐户连接到AWS上的Experience Platform，您必须具备以下条件：
 
 - 有权访问要连接的[!DNL Amazon S3]存储段或文件夹的AWS帐户。
 - 允许`s3:GetObject`和`s3:ListBucket`操作的必要IAM权限。
 
+### 列入允许列表在AWS上连接的IP地址
+
+将源连接到AWS上的Experience Platform之前，必须将特定于区域的IP地址添加到允许列表。 有关详细信息，请阅读[将IP地址列入允许列表到AWS](../../ip-address-allow-list.md)上的Experience Platform的指南。
+
 ### 在UI中访问[!DNL Amazon S3]源
 
-- 在Experience PlatformUI中导航到源目录。
+- 导航到Experience Platform UI中的源目录。
 - 选择[!DNL Amazon S3]，然后选择&#x200B;**[!UICONTROL 新帐户]**。
 - 复制[!UICONTROL 将IAM角色添加到IAM角色]下面列出的&#x200B;**IAM允许列表**。 您稍后将使用此IAM角色来设置[!DNL Amazon S3]存储段的权限。
 
@@ -126,19 +130,19 @@ Adobe Experience Platform为AWS、[!DNL Google Cloud Platform]和[!DNL Azure]等
 
 ### 提供您的[!DNL Amazon S3]连接详细信息并验证和完成连接
 
-设置权限后，返回Experience PlatformUI中的源目录并导航到[!DNL Amazon S3]源设置页面。 提供您要连接到的[!DNL Amazon S3]存储段的名称，并在适用的情况下提供存储段内特定文件夹的路径。 要验证您的设置，请选择&#x200B;**[!UICONTROL 测试连接]**。 如果成功，则可以继续并[创建数据流以将云存储数据摄取到Experience Platform](../../tutorials/ui/dataflow/batch/cloud-storage.md)。
+设置权限后，返回到Experience Platform UI中的源目录并导航到[!DNL Amazon S3]源设置页面。 提供您要连接到的[!DNL Amazon S3]存储段的名称，并在适用的情况下提供存储段内特定文件夹的路径。 要验证您的设置，请选择&#x200B;**[!UICONTROL 测试连接]**。 如果成功，则可以继续并[创建数据流以将云存储数据摄取到Experience Platform](../../tutorials/ui/dataflow/batch/cloud-storage.md)。
 
 ## 后续步骤
 
 以下文档提供了有关如何使用API或用户界面将[!DNL Amazon S3]连接到Experience Platform的信息：
 
-### 使用API连接[!DNL Amazon S3]以Experience Platform
+### 使用API将[!DNL Amazon S3]连接到Experience Platform
 
 - [使用流服务API将Amazon S3连接到Experience Platform](../../tutorials/api/create/cloud-storage/s3.md)
 - [使用流量服务API浏览云存储源的数据结构和内容](../../tutorials/api/explore/cloud-storage.md)
 - [使用流服务API为云存储源创建数据流](../../tutorials/api/collect/cloud-storage.md)
 
-### 使用UI连接[!DNL Amazon S3]以Experience Platform
+### 使用UI将[!DNL Amazon S3]连接到Experience Platform
 
 - [在UI中创建Amazon S3源连接](../../tutorials/ui/create/cloud-storage/s3.md)
 - [在UI中为云存储连接创建数据流](../../tutorials/ui/dataflow/batch/cloud-storage.md)
