Updated by task 'AUTO_HANDOFF_1743772727361'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/756b4d77e920f8c5e79d9d7038e7f0fb3d629589

--- a/help/release-notes/2024/may-2024.md
+++ b/help/release-notes/2024/may-2024.md
@@ -3,9 +3,9 @@ title: Adobe Experience Platform 发行说明（2024 年 5 月）
 description: Adobe Experience Platform 的 2024 年 5 月发行说明。
 exl-id: d8ea4f9e-2006-415c-869e-2748047072bb
 source-git-commit: fded2f25f76e396cd49702431fa40e8e4521ebf8
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1599'
-ht-degree: 96%
+ht-degree: 100%
 
 ---
 
@@ -39,7 +39,7 @@ Adobe Experience Platform 中的其他更新：
 
 | 功能 | 描述 |
 | --- | --- |
-| 批量操作 | 数据集清单现在支持批量操作。通过批量操作简化您的数据治理流程并确保高效管理您的数据集。使用批量操作通过同时对大量数据集执行多个操作来节省时间。批量操作包括[移至文件夹](../../catalog/datasets/user-guide.md#move-to-folders)、[编辑标签](../../catalog/datasets/user-guide.md#manage-tags)和[删除](../../catalog/datasets/user-guide.md#delete)数据集。<br> ![数据集 UI 工作区中的批量操作。](../2024/assets/may/bulk-actions.png "数据集 UI 工作区中的批量操作。"){width="100" zoomable="yes"} <br> 有关此功能的更多信息，请阅读[数据集 UI 指南](../../catalog/datasets/user-guide.md#bulk-actions)。 |
+| 批量操作 | 数据集清单现在支持批量操作。通过批量操作简化您的数据治理流程并确保高效管理您的数据集。使用批量操作通过同时对大量数据集执行多个操作来节省时间。批量操作包括[移至文件夹](../../catalog/datasets/user-guide.md#move-to-folders)、[编辑标记](../../catalog/datasets/user-guide.md#manage-tags)和[删除](../../catalog/datasets/user-guide.md#delete)数据集。<br> ![数据集 UI 工作区中的批量操作。](../2024/assets/may/bulk-actions.png "数据集 UI 工作区中的批量操作。"){width="100" zoomable="yes"} <br> 有关此功能的更多信息，请阅读[数据集 UI 指南](../../catalog/datasets/user-guide.md#bulk-actions)。 |
 
 {style="table-layout:auto"}
 
@@ -93,9 +93,9 @@ Adobe Experience Platform 数据治理是一系列策略和技术，用于管理
 | 功能 | 描述 |
 | --- | --- |
 | 旧版编辑器已弃用 | 旧版编辑器已被弃用，并且不再可供使用。您可以使用[查询编辑器的增强功能](../../query-service/ui/user-guide.md#query-authoring)来编写、验证和运行查询。 |
-| 查询运行延迟 | 通过设置查询运行延迟警报来控制计算时间。如果查询状态在特定时间段后没有改变，您可以选择接收警报。只需在Experience Platform UI中设置所需的延迟时间，即可随时了解您的查询进度。 要了解如何在 UI 中设置此警报，请参阅[查询计划文档](../../query-service/ui/query-schedules.md#alerts-for-query-status)或[内联查询操作指南](../../query-service/ui/monitor-queries.md#query-run-delay)。 |
-| 简化查询日志清单 | 您现在可以使用改进的故障排除效率和任务监控以及[简化的查询日志 UI](../../query-service/ui/query-logs.md#filter-logs)： <ul><li> Experience Platform UI现在默认从日志选项卡中排除所有“系统查询”。 </li><li> 通过取消选中&#x200B;**排除系统查询**&#x200B;来查看系统查询。 </li></ul> <br> ![查询 UI 工作区中的“日志”选项卡。](../2024/assets/may/query-log.png "查询 UI 工作区中的“日志”选项卡。"){width="100" zoomable="yes"} <br> 使用简化的查询日志 UI 获得更集中的视图，帮助您快速识别和分析相关日志。 |
-| 数据库选择器 | 使用新的数据库选择器下拉菜单[方便地从 Power BI 或 Tableau](../../query-service/ui/credentials.md#connect-to-customer-journey-analytics)访问 Customer Journey Analytics 数据视图。现在，您可以直接从Experience Platform UI中选择所需的数据库，以便更加无缝地集成BI工具。<br> ![查询 UI 工作区中的“凭据”选项卡。](../2024/assets/may/database-selector.png "查询 UI 工作区中的“凭据”选项卡。"){width="100" zoomable="yes"} <br> |
+| 查询运行延迟 | 通过设置查询运行延迟警报来控制计算时间。如果查询状态在特定时间段后没有改变，您可以选择接收警报。只需在 Experience Platform UI 中设置所需的延迟时间即可随时了解查询进度。要了解如何在 UI 中设置此警报，请参阅[查询计划文档](../../query-service/ui/query-schedules.md#alerts-for-query-status)或[内联查询操作指南](../../query-service/ui/monitor-queries.md#query-run-delay)。 |
+| 简化查询日志清单 | 您现在可以使用改进的故障排除效率和任务监控以及[简化的查询日志 UI](../../query-service/ui/query-logs.md#filter-logs)： <ul><li> Experience Platform UI 现在默认从日志选项卡中排除所有“系统查询”。 </li><li> 通过取消选中&#x200B;**排除系统查询**&#x200B;来查看系统查询。 </li></ul> <br> ![查询 UI 工作区中的“日志”选项卡。](../2024/assets/may/query-log.png "查询 UI 工作区中的“日志”选项卡。"){width="100" zoomable="yes"} <br> 使用简化的查询日志 UI 获得更集中的视图，帮助您快速识别和分析相关日志。 |
+| 数据库选择器 | 使用新的数据库选择器下拉菜单[方便地从 Power BI 或 Tableau](../../query-service/ui/credentials.md#connect-to-customer-journey-analytics)访问 Customer Journey Analytics 数据视图。您现在可以直接从 Experience Platform UI 选择所需的数据库，以实现更无缝地集成您的 BI 工具。<br> ![查询 UI 工作区中的“凭据”选项卡。](../2024/assets/may/database-selector.png "查询 UI 工作区中的“凭据”选项卡。"){width="100" zoomable="yes"} <br> |
 
 {style="table-layout:auto"}
 
