Updated by task 'AUTO_TM_MT_1747872569506' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/76e3124b098b536b50ca1e00c8b1563f373c65b7

--- a/help/release-notes/2025/may-2025.md
+++ b/help/release-notes/2025/may-2025.md
@@ -1,9 +1,10 @@
 ---
 title: Adobe Experience Platform 发行说明（2025 年 5 月）
 description: Adobe Experience Platform 的 2025 年 5 月发行说明。
-source-git-commit: 8f1538efc96c8dc47a505511ec7f064b07f124c8
+exl-id: de312f00-d682-476e-8960-a9ade06ce787
+source-git-commit: cbe50ee10be7e837656ba9f173f89136715c74ff
 workflow-type: tm+mt
-source-wordcount: '1170'
+source-wordcount: '1171'
 ht-degree: 51%
 
 ---
@@ -83,7 +84,7 @@ Adobe Experience Platform 中现有功能和文档的更新：
 
 | 功能 | 描述 |
 | --- | --- |
-| 正在引入[!DNL Identity Graph Linking Rules] | [!DNL Identity Graph Linking Rules]旨在通过防止图形折叠来帮助您维护准确的客户配置文件以进行个性化营销。<ul><li>使用[图形模拟工具](../../identity-service/identity-graph-linking-rules/graph-simulation.md)来测试和验证配置。</li><li>请参阅[标识仪表板](../../identity-service/identity-graph-linking-rules/implementation-guide.md#validate-your-graphs)以监视组织中图形折叠的任何实例。</li><li>若要开始，请阅读[[!DNL Identity Graph Linking Rules] 实施指南](../../identity-service/identity-graph-linking-rules/implementation-guide.md)。</li></ul> **注意**：在您手动配置身份设置之前，您的数据将会发生更改。 |
+| [!DNL Identity Graph Linking Rules] | [!DNL Identity Graph Linking Rules]现已正式可用。 [!DNL Identity Graph Linking Rules]防止“图形折叠”，确保在Experience Platform和应用程序间进行个性化营销时可获得明确而准确的客户个人资料。 主要功能包括：<ul><li>[图形模拟工具](../../identity-service/identity-graph-linking-rules/graph-simulation.md)：浏览算法并测试身份设置配置。</li><li> [身份设置](../../identity-service/identity-graph-linking-rules/identity-settings-ui.md)：配置唯一的命名空间并设置优先级。</li><li>[身份仪表板](../../identity-service/identity-graph-linking-rules/implementation-guide.md#validate-your-graphs)：监视图形并验证身份设置。</li></ul> **注意**：在您手动配置身份设置之前，您的数据不会发生任何更改。 |
 
 {style="table-layout:auto"}
 
