Updated by task 'AUTO_TM_MT_1753957938343' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/983df0c5b09e8c818c0253809d855633798136df

--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -1,15 +1,14 @@
 ---
 title: Adobe Experience Platform 发行说明（2025 年 7 月）
 description: Adobe Experience Platform 的 2025 年 7 月发行说明。
-exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
-source-git-commit: 2553b8f016a20678550eed50671e3549ec42aae7
+source-git-commit: fff6318e7f70176aee5fafe2e024c71922496aff
 workflow-type: tm+mt
-source-wordcount: '1457'
+source-wordcount: '1573'
 ht-degree: 22%
 
 ---
 
-# Adobe Experience Platform预发行说明
+# Adobe Experience Platform 发行说明
 
 >[!TIP]
 >
@@ -53,6 +52,7 @@ Adobe Experience Platform 中新功能和现有功能的更新：
 | 目标 | 描述 |
 | --- | --- |
 | [Google Customer Match + Display &amp; Video 360](/help/destinations/catalog/advertising/google-customer-match-dv360.md)连接的可用性有限 | 在6月份向所有客户简要推出后，Adobe已将此集成恢复为有限可用。 目前，此目标的访问仅限于已启用的客户，而Adobe和Google正在努力解决实施问题。 如果您希望在更广泛的推出恢复后使用此集成，请联系您的Adobe代表来表达您的意图。 |
+| [[!DNL The Trade Desk]](../../destinations/catalog/advertising/tradedesk.md)内部升级 | 从2025年7月31日开始，您可以在目标目录中并排看到两张[!DNL The Trade Desk]信息卡。 这是由于目标服务内部升级造成的。<br><br>现有[!DNL The Trade Desk]目标连接器已重命名为&#x200B;**[!UICONTROL （已弃用）交易台]**&#x200B;和名称为&#x200B;**[!UICONTROL 交易台]**&#x200B;的新卡现在可用。 使用目录中的新&#x200B;**[!UICONTROL 交易台]**&#x200B;连接获取新的激活数据流。 <br><br>如果您有任何到&#x200B;**[!UICONTROL （已弃用）交易台]**&#x200B;目标的活动数据流，它们会自动更新，因此您无需执行任何操作。 <br><br>如果您是通过[流服务API](https://developer.adobe.com/experience-platform-apis/references/destinations/)创建数据流，则必须将[!DNL flow spec ID]和[!DNL connection spec ID]更新为以下值：<ul><li>流量规范 ID：`86134ea1-b014-49e8-8bd3-689f4ce70578`</li><li>连接规范 ID：`1029798b-a97f-4c21-81b2-e0301471166e`</li></ul> |
 
 **新增或更新的功能**
 
