Updated by task 'AUTO_TM_MT_1761240317778' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/742cbd2059c48dea25158f1f818f8416075c414d

--- a/help/release-notes/2025/june-2025.md
+++ b/help/release-notes/2025/june-2025.md
@@ -2,10 +2,10 @@
 title: Adobe Experience Platform 发行说明（2025 年 6 月）
 description: Adobe Experience Platform 的 2025 年 6 月发行说明。
 exl-id: 79f7e2ff-eff1-4f15-b8d9-f5b83d7ad9e7
-source-git-commit: cff694c1b04ba1513cb460c3b47b56eaef4b1f34
+source-git-commit: 375bfaf57b7ba92c9dbcd4b20f307b669a581b80
 workflow-type: tm+mt
-source-wordcount: '1632'
-ht-degree: 100%
+source-wordcount: '1613'
+ht-degree: 96%
 
 ---
 
@@ -45,7 +45,7 @@ Experience Platform 利用 [Adobe Admin Console](https://adminconsole.adobe.com)
 
 | 功能 | 描述 |
 | ------- | ----------- |
-| 导出仪表板数据权限 | 仪表板中的&#x200B;**[!UICONTROL 下载 CSV]** 和&#x200B;**[!UICONTROL 以电子邮件形式发送]**&#x200B;选项现在需要&#x200B;**[!UICONTROL 导出仪表板数据]**&#x200B;权限。此权限确保只有授权用户才能导出表格洞察数据，从而支持更严格的治理和数据访问控制策略。请阅读[访问控制指南的权限部分](../../access-control/home.md#permissions)以了解更多信息。 |
+| 导出仪表板数据权限 | 仪表板中的&#x200B;**[!UICONTROL Download CSV]**&#x200B;和&#x200B;**[!UICONTROL Send as email]**&#x200B;选项现在需要&#x200B;**[!UICONTROL Export Dashboard Data]**&#x200B;权限。 此权限确保只有授权用户才能导出表格洞察数据，从而支持更严格的治理和数据访问控制策略。请阅读[访问控制指南的权限部分](../../access-control/home.md#permissions)以了解更多信息。 |
 
 有关更多信息，请参阅[访问控制概述](../../access-control/home.md)。
 
@@ -81,7 +81,7 @@ Experience Platform 提供了多个仪表板，您可以通过这些仪表板查
 
 | 功能 | 描述 |
 | ------- | ----------- |
-| 以电子邮件导出选项发送 | 您现在可以从 Query Pro Mode 仪表板中导出多达 10,000 条记录，只需从&#x200B;**[!UICONTROL 查看更多]**&#x200B;菜单中选择&#x200B;**[!UICONTROL 以电子邮件形式发送]**&#x200B;即可。此选项可安全地将下载链接发送到与 Adobe 相关的电子邮件，以便进行更大规模的导出。请阅读[查看更多指南](../../dashboards/sql-insights-query-pro-mode/view-more.md#export)以了解详情。 |
+| 以电子邮件导出选项发送 | 现在，通过从&#x200B;**[!UICONTROL Send as email]**&#x200B;菜单中选择&#x200B;**[!UICONTROL View more]**，您可以从Query Pro模式功能板中导出最多10,000条记录。 此选项可安全地将下载链接发送到与 Adobe 相关的电子邮件，以便进行更大规模的导出。请阅读[查看更多指南](../../dashboards/sql-insights-query-pro-mode/view-more.md#export)以了解详情。 |
 
 有关仪表板的详细信息，包括如何授予访问权限和创建自定义小组件，请首先阅读[仪表板概述](../../dashboards/home.md)。
 
@@ -112,9 +112,9 @@ Adobe Experience Platform 数据治理是一系列策略和技术，用于管理
 
 | 功能 | 描述 |
 | --- | --- |
-| 流式投放目标的[受众级别监控](../../dataflows/ui/monitor-destinations.md#audience-level-dataflow-runs-for-streaming-destinations) | 以下投放目标现已支持受众级别监控： <ul><li>[[!DNL (API) Oracle Eloqua] 连接](../../destinations/catalog/email-marketing/oracle-eloqua-api.md)</li><li>[[!DNL (V2) Marketo Engage]](../../destinations/catalog/adobe/marketo-engage.md)</li><li>[[!DNL Airship Attributes]](../../destinations/catalog/mobile-engagement/airship-attributes.md)</li><li>[[!DNL Amazon Kinesis]](../../destinations/catalog/cloud-storage/amazon-kinesis.md)</li><li>[[!DNL Azure Event Hubs]](../../destinations/catalog/cloud-storage/azure-event-hubs.md)</li><li>[[!DNL Google Customer Match + Display & Video 360]](../../destinations/catalog/advertising/google-customer-match-dv360.md)</li><li>[[!DNL HTTP API]](../../destinations/catalog/streaming/http-destination.md)</li><li>[[!DNL HubSpot]](../../destinations/catalog/crm/hubspot.md)</li><li>[[!DNL Magnite: Real-time]](../../destinations/catalog/advertising/magnite-streaming.md)</li><li>[[!DNL Marketo Engage Person Sync]](../../destinations/catalog/adobe/marketo-engage-person-sync.md)</li><li>[[!DNL Microsoft Dynamics 365]](../../destinations/catalog/crm/microsoft-dynamics-365.md)</li><li>[[!DNL Moengage]](../../destinations/catalog/mobile-engagement/moengage.md)</li><li>[[!DNL Outreach]](../../destinations/catalog/crm/outreach.md)</li><li>[[!DNL PubMatic Connect]](../../destinations/catalog/advertising/pubmatic.md)</li><li>[[!DNL PubMatic Connect (Custom Audience ID Mapping)]](../../destinations/catalog/advertising/pubmatic.md)</li><li>[[!DNL Qualtrics Automations]](../../destinations/catalog/survey/qualtrics-automations.md)</li><li>[[!DNL RainFocus Attendee Profiles]](../../destinations/catalog/marketing-automation/rainfocus.md)</li><li>[[!DNL SAP Commerce]](../../destinations/catalog/ecommerce/sap-commerce.md)</li><li>[[!DNL Snowflake]](../../destinations/catalog/cloud-storage/snowflake.md)</li><li>[[!DNL Yahoo DataX]](../../destinations/catalog/advertising/datax.md)</li><li>[[!DNL Zendesk]](../../destinations/catalog/crm/zendesk.md)</li></ul> |
+| 流式投放目标的[受众级别监控](../../dataflows/ui/monitor-destinations.md#audience-level-dataflow-runs-for-streaming-destinations) | 以下投放目标现已支持受众级别监控： <ul><li>[[!DNL (API) Oracle Eloqua] 连接](../../destinations/catalog/email-marketing/oracle-eloqua-api.md)</li><li>[[!DNL (V2) Marketo Engage]](../../destinations/catalog/adobe/marketo-engage.md)</li><li>[[!DNL Airship Attributes]](../../destinations/catalog/mobile-engagement/airship-attributes.md)</li><li>[[!DNL Amazon Kinesis]](../../destinations/catalog/cloud-storage/amazon-kinesis.md)</li><li>[[!DNL Azure Event Hubs]](../../destinations/catalog/cloud-storage/azure-event-hubs.md)</li><li>[[!DNL Google Customer Match + Display & Video 360]](../../destinations/catalog/advertising/google-customer-match-dv360.md)</li><li>[[!DNL HTTP API]](../../destinations/catalog/streaming/http-destination.md)</li><li>[[!DNL HubSpot]](../../destinations/catalog/crm/hubspot.md)</li><li>[[!DNL Magnite: Real-time]](../../destinations/catalog/advertising/magnite-streaming.md)</li><li>[[!DNL Marketo Engage Person Sync]](../../destinations/catalog/adobe/marketo-engage-person-sync.md)</li><li>[[!DNL Microsoft Dynamics 365]](../../destinations/catalog/crm/microsoft-dynamics-365.md)</li><li>[[!DNL Moengage]](../../destinations/catalog/mobile-engagement/moengage.md)</li><li>[[!DNL Outreach]](../../destinations/catalog/crm/outreach.md)</li><li>[[!DNL PubMatic Connect]](../../destinations/catalog/advertising/pubmatic.md)</li><li>[[!DNL PubMatic Connect (Custom Audience ID Mapping)]](../../destinations/catalog/advertising/pubmatic.md)</li><li>[[!DNL Qualtrics Automations]](../../destinations/catalog/survey/qualtrics-automations.md)</li><li>[[!DNL RainFocus Attendee Profiles]](../../destinations/catalog/marketing-automation/rainfocus.md)</li><li>[[!DNL SAP Commerce]](../../destinations/catalog/ecommerce/sap-commerce.md)</li><li>[[!DNL Snowflake]](../../destinations/catalog/warehouses/snowflake-batch.md)</li><li>[[!DNL Yahoo DataX]](../../destinations/catalog/advertising/datax.md)</li><li>[[!DNL Zendesk]](../../destinations/catalog/crm/zendesk.md)</li></ul> |
 | 为 [Facebook](../../destinations/catalog/social/facebook.md#supported-identities) 目标提供额外的标识符支持 | [!DNL Facebook] 目标现在支持映射新的地址相关字段以改进目标市场选择，并与 Facebook 属性上的轮廓匹配。有关新增地址相关字段的详细信息，请参阅[支持的身份标识](../../destinations/catalog/social/facebook.md#supported-identities)部分。<br> ![平台 UI 图像显示 Facebook 的附加字段。](assets/june/facebook-destination-fields.png "平台 UI 图像显示 Facebook 的附加字段。"){width="200" align="center" zoomable="yes"} |
-| [[!DNL Braze]](../../destinations/catalog/mobile-engagement/braze.md)目标升级 | 从 2025 年 6 月 19 日开始，您可以在目标目录中并排看到两张 **[!DNL Braze]** 卡。这是由于目标服务内部升级造成的。现有的[!DNL Braze]目标连接器已更名为&#x200B;**[!UICONTROL （已弃用）Braze]**，并且现在为您提供了一个名为 **[!UICONTROL Braze]** 的新卡片。<br>将目录中的 **[!UICONTROL Braze]** 连接用于新的激活数据流。如果您有任何连接到&#x200B;**[!UICONTROL （已弃用）Braze]** 目标的激活数据流，它们将自动更新，因此无需您执行任何操作。<br>如果您通过 [Flow Service API](https://developer.adobe.com/experience-platform-apis/references/destinations/) 创建数据流，则必须将 [!DNL flow spec ID] 和 [!DNL connection spec ID] 更新为以下值： <ul><li>流量规范 ID：`cb7919bd-69aa-462d-bcc0-db7cdc7fdf51`</li><li>连接规范 ID：`ab957205-5a78-4393-b901-b930ed548220`</li></ul> |
+| [[!DNL Braze]](../../destinations/catalog/mobile-engagement/braze.md)目标升级 | 从 2025 年 6 月 19 日开始，您可以在目标目录中并排看到两张 **[!DNL Braze]** 卡。这是由于目标服务内部升级造成的。现有[!DNL Braze]目标连接器已重命名为&#x200B;**[!UICONTROL (Deprecated) Braze]**，现在您可以使用名称为&#x200B;**[!UICONTROL Braze]**&#x200B;的新信息卡。 <br>使用目录中的&#x200B;**[!UICONTROL Braze]**&#x200B;连接获取新的激活数据流。 如果您有任何连接到 **[!UICONTROL (Deprecated) Braze]** 目标的激活数据流，它们将自动更新，因此无需您执行任何操作。<br>如果您通过 [Flow Service API](https://developer.adobe.com/experience-platform-apis/references/destinations/) 创建数据流，则必须将 [!DNL flow spec ID] 和 [!DNL connection spec ID] 更新为以下值： <ul><li>流量规范 ID：`cb7919bd-69aa-462d-bcc0-db7cdc7fdf51`</li><li>连接规范 ID：`ab957205-5a78-4393-b901-b930ed548220`</li></ul> |
 
 {style="table-layout:auto"}
 
