Updated by AutoLocalizeURLs.py

--- a/help/tags/release-notes/2018.md
+++ b/help/tags/release-notes/2018.md
@@ -79,7 +79,7 @@ ht-degree: 69%
 
   数据元素、规则和扩展配置将动态交付到应用程序，并在应用程序启动时更新，而不需要使用应用商店更新。
 
-有关移动资产入门的更多信息，请参阅[移动](https://experienceleague.adobe.com/docs/platform-learn/data-collection/mobile-sdk/overview.html)。
+有关移动资产入门的更多信息，请参阅[移动](https://experienceleague.adobe.com/docs/platform-learn/data-collection/mobile-sdk/overview.html?lang=zh-Hans)。
 
 ## 2018 年 9 月 6 日
 
