--- a/help/tags/release-notes/2020.md
+++ b/help/tags/release-notes/2020.md
@@ -55,7 +55,7 @@ ht-degree: 80%
 
 * **左边栏导航：**&#x200B;资产中日常工作的主页将从资产名称下方移至可折叠的左边栏中。这些主页现在也根据使用意图和模式归为一些逻辑组。
 * **应用程序痕迹导航：**&#x200B;痕迹导航已添加到整个应用程序中。现在，无论您正在查看哪个屏幕，都会向您提供上下文。这包括修改组件时向您显示规则名称，告知您如何在所查看的比较屏幕中获取四个级别，以及其他内容。屏幕顶部已重新组织，以最大化您的日常任务所需的屏幕空间。您仍然能够轻松找到想要查找的一切内容。
-* **添加了新端点：**`{{extension_package_id}}/versions` 允许 API 用户查看公共扩展包的所有版本。API 用户还可以查看处于开发状态或归所属组织专有的扩展包的版本信息。请参阅[https://experienceleague.adobe.com/docs/experience-platform/tags/api/endpoints/extension-packages.html](../api/endpoints/extension-packages.md#list-the-versions-for-an-extension-package)
+* **添加了新端点：**`{{extension_package_id}}/versions` 允许 API 用户查看公共扩展包的所有版本。API 用户还可以查看处于开发状态或归所属组织专有的扩展包的版本信息。请参阅[https://experienceleague.adobe.com/docs/experience-platform/tags/api/endpoints/extension-packages.html?lang=zh-Hans](../api/endpoints/extension-packages.md#list-the-versions-for-an-extension-package)
 
 ### 错误修复
 
@@ -102,7 +102,7 @@ ht-degree: 80%
 
 ### 功能
 
-* 更新规则组件（事件、条件或操作）时，其所属的规则的 `updated_at` 属性也会更新。这更准确地反映了规则的行为已通过修改其一个或多个组件而发生更改。如果对规则使用回调，您将看到规则 `updated_at` 回调增加。有关详细信息，请参阅[https://experienceleague.adobe.com/docs/experience-platform/tags/api/endpoints/rule-components.html](../api/endpoints/rule-components.md)。
+* 更新规则组件（事件、条件或操作）时，其所属的规则的 `updated_at` 属性也会更新。这更准确地反映了规则的行为已通过修改其一个或多个组件而发生更改。如果对规则使用回调，您将看到规则 `updated_at` 回调增加。有关详细信息，请参阅[https://experienceleague.adobe.com/docs/experience-platform/tags/api/endpoints/rule-components.html?lang=zh-Hans](../api/endpoints/rule-components.md)。
 
 ## 2020 年 3 月 3 日
 
