Updated by AutoLocalizeURLs.py

--- a/help/tags/release-notes/2020.md
+++ b/help/tags/release-notes/2020.md
@@ -30,7 +30,7 @@ ht-degree: 80%
 
 ### 功能
 
-* **数据元素默认值** 新建的数据元素将不再具有自动分配的默认值。有关更多信息，请参阅 [Experience League 社区](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-platform-launch/coming-soon-data-element-quot-default-value-quot-changes/ba-p/374101)
+* **数据元素默认值** 新建的数据元素将不再具有自动分配的默认值。有关更多信息，请参阅 [Experience League 社区](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-platform-launch/coming-soon-data-element-quot-default-value-quot-changes/ba-p/374101?profile.language=zh-Hans)
 
 ## 2020 年 8 月 19 日
 
