--- a/help/tags/release-notes/2021.md
+++ b/help/tags/release-notes/2021.md
@@ -29,7 +29,7 @@ ht-degree: 0%
 
 ## 2021年7月19日
 
-**调整“管理属性”权限** — “管理属性”权限遇到以下问题：用户具有创建新属性的权限，但在创建新属性后无法查看（如[此处](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-platform-launch/technical-advisory-adjustments-to-the-manage-properties/ba-p/399176)的社区会话中所述）。 现已启动修复，并强制实施文章中所述的权限。
+**调整“管理属性”权限** — “管理属性”权限遇到以下问题：用户具有创建新属性的权限，但在创建新属性后无法查看（如[此处](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-platform-launch/technical-advisory-adjustments-to-the-manage-properties/ba-p/399176?profile.language=zh-Hans)的社区会话中所述）。 现已启动修复，并强制实施文章中所述的权限。
 
 >[!NOTE]
 >
